set(libs
    mbedtls
)

add_executable(${MBEDTLS_EXAMPLES_PREFIX_}strerror strerror.c)
target_link_libraries(${MBEDTLS_EXAMPLES_PREFIX_}strerror ${libs})
SET_TARGET_PROPERTIES(${MBEDTLS_EXAMPLES_PREFIX_}strerror PROPERTIES FOLDER ${MBEDTLS_FOLDER_PREFIX}/Examples/util)

add_executable(${MBEDTLS_EXAMPLES_PREFIX_}pem2der pem2der.c)
target_link_libraries(${MBEDTLS_EXAMPLES_PREFIX_}pem2der ${libs})
SET_TARGET_PROPERTIES(${MBEDTLS_EXAMPLES_PREFIX_}pem2der PROPERTIES FOLDER ${MBEDTLS_FOLDER_PREFIX}/Examples/util)

IF(MBEDTLS_ENABLE_INSTALL)
install(TARGETS ${MBEDTLS_EXAMPLES_PREFIX_}strerror ${MBEDTLS_EXAMPLES_PREFIX_}pem2der
        DESTINATION "bin"
        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
ENDIF(MBEDTLS_ENABLE_INSTALL)