set(libs
    mbedtls
)

if(USE_PKCS11_HELPER_LIBRARY)
    set(libs ${libs} pkcs11-helper)
endif(USE_PKCS11_HELPER_LIBRARY)

if(ENABLE_ZLIB_SUPPORT)
    set(libs ${libs} ${ZLIB_LIBRARIES})
endif(ENABLE_ZLIB_SUPPORT)

add_executable(${MBEDTLS_EXAMPLES_PREFIX_}cert_app cert_app.c)
target_link_libraries(${MBEDTLS_EXAMPLES_PREFIX_}cert_app ${libs})
SET_TARGET_PROPERTIES(${MBEDTLS_EXAMPLES_PREFIX_}cert_app PROPERTIES FOLDER ${MBEDTLS_FOLDER_PREFIX}/Examples/x509)

add_executable(${MBEDTLS_EXAMPLES_PREFIX_}crl_app crl_app.c)
target_link_libraries(${MBEDTLS_EXAMPLES_PREFIX_}crl_app ${libs})
SET_TARGET_PROPERTIES(${MBEDTLS_EXAMPLES_PREFIX_}crl_app PROPERTIES FOLDER ${MBEDTLS_FOLDER_PREFIX}/Examples/x509)

add_executable(${MBEDTLS_EXAMPLES_PREFIX_}req_app req_app.c)
target_link_libraries(${MBEDTLS_EXAMPLES_PREFIX_}req_app ${libs})
SET_TARGET_PROPERTIES(${MBEDTLS_EXAMPLES_PREFIX_}req_app PROPERTIES FOLDER ${MBEDTLS_FOLDER_PREFIX}/Examples/x509)

add_executable(${MBEDTLS_EXAMPLES_PREFIX_}cert_req cert_req.c)
target_link_libraries(${MBEDTLS_EXAMPLES_PREFIX_}cert_req ${libs})
SET_TARGET_PROPERTIES(${MBEDTLS_EXAMPLES_PREFIX_}cert_req PROPERTIES FOLDER ${MBEDTLS_FOLDER_PREFIX}/Examples/x509)

add_executable(${MBEDTLS_EXAMPLES_PREFIX_}cert_write cert_write.c)
target_link_libraries(${MBEDTLS_EXAMPLES_PREFIX_}cert_write ${libs})
SET_TARGET_PROPERTIES(${MBEDTLS_EXAMPLES_PREFIX_}cert_write PROPERTIES FOLDER ${MBEDTLS_FOLDER_PREFIX}/Examples/x509)

IF(MBEDTLS_ENABLE_INSTALL)
install(TARGETS ${MBEDTLS_EXAMPLES_PREFIX_}cert_app ${MBEDTLS_EXAMPLES_PREFIX_}crl_app ${MBEDTLS_EXAMPLES_PREFIX_}req_app ${MBEDTLS_EXAMPLES_PREFIX_}cert_req ${MBEDTLS_EXAMPLES_PREFIX_}cert_write
        DESTINATION "bin"
        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
ENDIF(MBEDTLS_ENABLE_INSTALL)